[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "marketplace-listing-lint"
version = "0.1.0"
description = "Dependency-free CLI for checking marketplace product listing quality."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Marketplace Listing Lint Maintainers"}]
keywords = ["ecommerce", "marketplace", "listing", "lint", "tiktok-shop", "cross-border"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Customer Service",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Office/Business",
  "Topic :: Software Development :: Quality Assurance"
]

[project.scripts]
listing-lint = "listing_lint.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
